Add nixpacks configuration for Node.js and pnpm, and update start command in railway.toml to use npm

--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [deploy]
-startCommand = "pnpm start --schema ${RAILWAY_DEPLOYMENT_ID:-builders_v4_prod} --views-schema builders_v4"
+startCommand = "npm start -- --schema ${RAILWAY_DEPLOYMENT_ID:-builders_v4_prod} --views-schema builders_v4"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 
